--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+    <h1>La Bilbliothèque d'Erwann</h1>
+    <p>ededieuleveult@gmail.com</p>
+</div>
+
