--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,17 @@
-<h2><%= @user.first_name%> <%= @user.last_name%></h2>
+<h1><%= @user.first_name%> <%= @user.last_name%></h1>
+
+<%= render 'simple_form' %>
+
+<%= link_to "Delete", @user,
+        method: :delete,
+        data: { confirm: 'Are you sure?' }%>
+
+<%# <script src="sweetalert2.min.js"></script>
+<link rel="stylesheet" href="sweetalert2.min.css">
+
+swal({
+  title: 'Error!',
+  text: 'Do you want to continue',
+  type: 'error',
+  confirmButtonText: 'Cool'
+}) %>
