--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,6 @@
 <div>
-      <h1><%= @book.title%></h1>
-      <h1><%= @book.author%></h1>
+      <h1>Title : <%= @book.title%></h1>
+      <h3>written by : <%= @book.author%></h3>
+      <p>Resume : </p>
       <p><%= @book.resume%></p>
 </div>
