--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,12 @@
-<div class="container">
+<%= content_for(:navbar_class, "navbar-home") %>
+
+<div class="banner">
+  <div class="banner-content text-center">
     <h1>La Bilbliothèque d'Erwann</h1>
     <p>ededieuleveult@gmail.com</p>
-</div>
 
+    <div class="linkedin">
+      <a href="https://www.linkedin.com/in/erwannddlv" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+    </div>
+  </div>
+</div>
