--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,7 @@
-<div class="navbar-wagon">
+
+
+
+<div class="navbar-wagon <%= yield(:navbar_class) %>">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "logo-bibliotheque.png", class: "logo"%>
@@ -24,3 +27,4 @@
       </div>
     </div>
   </div>
+</div>
