--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,19 @@
-<h1> TEST </h1>
-<div class="col-xs-12">
-    <% @users.each do |user| %>
-        <ul>
-            <li>
-                <p><%= link_to user.first_name, user_path(user) %></p>
-                
-            </li>
-        </ul>
-    <% end %>
+<div class="wrapper">
+    <div class="container">
+
+        <%= simple_form_for :search, html: {class: "form-search"}, :method => :get do |f| %>
+            <%= f.input :search, autofocus: true, input_html: {class: "form-search-input", placeholder: "Entrer une adresse de retrait"}, label: false %>
+        <% end %>
+        
+        <div class="col-xs-12">
+            <% @users.each do |user| %>
+                <ul>
+                    <li>
+                        <p><%= link_to user.first_name, user_path(user) %></p>
+                        <img src="<%= user.avatar %>">
+                    </li>
+                </ul>
+            <% end %>
+        </div>
+    </div>
 </div>
