--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,17 @@
-<h1><%= @user.first_name%> <%= @user.last_name%></h1>
+<div class="wrapper">
+  <div class="container">
+    <h1><%= @user.first_name%> <%= @user.last_name%></h1>
 
-<%= render 'simple_form' %>
+    <%= link_to "Edit", edit_user_path(@user) %>
 
-<%= link_to "Delete", @user,
-        method: :delete,
-        data: { confirm: 'Are you sure?' }%>
+    <%= link_to "Delete", @user,
+      method: :delete,
+      data: { confirm: 'Are you sure?' }%>
 
-<%# <script src="sweetalert2.min.js"></script>
-<link rel="stylesheet" href="sweetalert2.min.css">
 
-swal({
-  title: 'Error!',
-  text: 'Do you want to continue',
-  type: 'error',
-  confirmButtonText: 'Cool'
-}) %>
+    <%= form_for @user, url: users_path, html: { multipart: true } do |form| %>
+      <%= form.file_field :avatar %>
+      <%= form.submit %>
+    <% end %>
+  </div>
+</div>
