--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -17,9 +17,19 @@ $brand-info:      $yellow;
 $brand-danger:    $red;
 $brand-warning:   $orange;
 
+
+
 // Buttons & inputs' radius
 $border-radius-base:  2px;
 $border-radius-large: 2px;
 $border-radius-small: 2px;
 
 // Override other variables below!
+.table-danger {
+  background-color: #f6c5cb;  
+}
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+    background-color: yellow;
+  }
+  
