--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,4 +3,13 @@
       <h3>written by : <%= @book.author%></h3>
       <p>Resume : </p>
       <p><%= @book.resume%></p>
+      <a href="books/<%= @book.id %>">
+            <%= image_tag @book.book_cover.url(:book_show) %>
+      </a>
 </div>
+
+<%= link_to 'Edit', edit_book_path(@book) %>
+
+<%= link_to "Delete", @user, method: :delete, data: { confirm: 'Are you sure?' }%>
+
+<%= link_to 'Back', root_path %>
