--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,31 @@
-<div class="wrapper">
+<div id="wrapper-top">
+    <div class="head-container">
+        <div class="col-xs-2"><%= link_to 'Back', url_for(:back), class: 'btn-light btn-xs' %></div>
+        <div class="col-xs-8"><%= render 'shared/search-bar' %></div>
+        <div class="col-xs-2">
+            <%= button_to "Add a User", new_user_path, class: "btn-primary", method: :get %>
+        </div>
+    </div>
+</div>
+<div id="wrapper">
     <div class="container">
-
-        <%= simple_form_for :search, html: {class: "form-search"}, :method => :get do |f| %>
-            <%= f.input :search, autofocus: true, input_html: {class: "form-search-input", placeholder: "Entrer une adresse de retrait"}, label: false %>
-        <% end %>
         
-        <div class="col-xs-12">
+        <div class="row">
             <% @users.each do |user| %>
-                <ul>
-                    <li>
-                        <p><%= link_to user.first_name, user_path(user) %></p>
-                        <img src="<%= user.avatar %>">
-                    </li>
-                </ul>
+                <div class="col-xs-12 col-sm-4">
+
+                    <div class="card">
+                        <% if user.avatar.url.exists? %>
+                            <%= image_tag user.avatar.url(:thumb)%>
+                        <% else %>
+                            <%= image_tag user.default_url(:thumb)%>
+                        <% end %>
+                        <div class="card-body">
+                            <h5 class="card-title"><%= link_to user.first_name, user_path(user) %></h5>
+                            <p class="card-text"><small class="text-muted">book</small></p>
+                        </div>
+                    </div>
+                </div>
             <% end %>
         </div>
     </div>
