--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,14 +1,15 @@
 .footer {
-    background: whitesmoke;
+    background:#ee5;
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 50px;
     padding: 0px 50px;
     color: rgba(0,0,0,0.3);
-    position: fixed;
+    // position: fixed;
     bottom: 0;
     width: 100%;
+    margin-top: 20px;
 }
 
 .footer-home {
@@ -16,21 +17,6 @@
 }
 
 .footer-links {
-    display: flex;
-    align-items: center;
-}
-.footer-links a {
-    color: black;
-    opacity: 0.15;
-    text-decoration: none;
-    font-size: 24px;
-    padding: 0px 10px;
-}
-.footer-links a:hover {
-    opacity: 1;
-}
-
-.social-links {
     position: relative;
     display: flex;
     justify-content: center;
@@ -58,7 +44,7 @@
     }
 }
   
-.text-footer {
+.footer-text {
     color: #A6A6A6;
     font-size: 15px;
     margin: 0 10px;
