--- a/app/assets/stylesheets/layouts/_wrapper.scss
+++ b/app/assets/stylesheets/layouts/_wrapper.scss
@@ -1,4 +1,12 @@
-.wrapper {
-    background-color: white;
-    margin-bottom: 50px;
-  }
+#wrapper{
+  padding-right: 10px;
+  padding-left:  10px;
+  padding-top: 10px;
+}
+
+#wrapper-top{
+  padding-right: 10px;
+  padding-left:  10px;
+  padding-top: 20px;
+  background-color: #F2DFDA;
+}
