--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,10 @@
 <div class="footer <%= yield(:footer_class) %>">
 
-  <div class="text-footer">
+  <div class="footer-text">
     site réalisé à Viroflay. Tous droits réservés.
   </div>
 
-  <div class="social-links">
+  <div class="footer-links">
     <a href="https://www.linkedin.com/in/erwannddlv" target="_blank"><i class="fab fa-linkedin fa-sm"></i></a>
     <a href="https://www.facebook.com/ededieuleveult" target="_blank"><i class="fab fa-facebook-square fa-sm"></i></a>
     <a href="https://twitter.com/ErwannDDLV" target="_blank"><i class="fab fa-twitter-square fa-sm"></i></a>
