--- a/app/views/users/_simple_form.html.erb
+++ b/app/views/users/_simple_form.html.erb
@@ -2,11 +2,23 @@
     <div class="container">
         <div class="col-xs-12">
             
-            <%= simple_form_for @user do |f| %>
-                <%= f.input :first_name %>
-                <%= f.input :last_name %>
-                <%= f.input :email %>
-                <%= f.button :submit %>
+            <%= simple_form_for @user, html: {multipart: true} do |f| %>
+                <div class="form-group">
+                    <%= f.input :first_name %>
+                    <%= f.input :last_name %>
+                    <%= f.input :email %>
+                </div>
+                <div class="form-group">
+                    <%= f.label :image %>
+                    <%= f.file_field :avatar, class:"form-control" %>
+                </div>
+                <div class="actions">
+                    <%= f.button :submit %>
+                </div>
             <% end %>
+        </div>
     </div>
 </div>
+
+
+<%# , url: users_path  %>
