add style and set index page for Users

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,5 +4,8 @@
 @import "banner";
 @import "footer";
 @import "book";
-@import "user_card";
+@import "card";
 @import "simple_form";
+@import "avatar";
+@import "button";
+@import "search-bar";
