--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -17,6 +17,11 @@ $brand-info:      $yellow;
 $brand-danger:    $red;
 $brand-warning:   $orange;
 
+$orange: #ff6023;
+$light-orange: #f3dfdb;
+$light-grey: #E8E8E8;
+$light-blue: #A9BAD9;
+
 
 
 // Buttons & inputs' radius
