--- a/app/assets/stylesheets/layouts/_container.scss
+++ b/app/assets/stylesheets/layouts/_container.scss
@@ -1,10 +1,10 @@
 .container{
     margin:0 auto;
-    padding:5px;
+    padding: 5px;
 }
 
 .head-container{
     display: flex;
-    justify-content: space-between;
-    align-self: center;
+    align-items: center;
+    justify-content: center;
 }
