--- a/app/assets/stylesheets/layouts/_wrapper.scss
+++ b/app/assets/stylesheets/layouts/_wrapper.scss
@@ -1,12 +1,14 @@
 #wrapper{
   padding-right: 10px;
-  padding-left:  10px;
+  padding-left: 10px;
   padding-top: 10px;
+  padding-bottom: 20px;
+  background-color: #F8F8F8;
 }
 
 #wrapper-top{
-  padding-right: 10px;
-  padding-left:  10px;
-  padding-top: 20px;
-  background-color: #F2DFDA;
+  padding: 20px 10px;
+  background-color: #F8F8F8;
+  box-shadow: 0 1px 10px 0 rgba(0,0,0,0.07);
+
 }
