--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,30 @@
 <div id="wrapper-top">
     <div class="head-container">
-        <div class="col-xs-2"><%= link_to 'Back', url_for(:back), class: 'btn-light btn-xs' %></div>
+        <div class="col-xs-2">
+            <%= link_to 'Back', url_for(:back), class: 'btn-light btn-xs' %></div>
         <div class="col-xs-8"><%= render 'shared/search-bar' %></div>
         <div class="col-xs-2">
-            <%= button_to "Add a User", new_user_path, class: "btn-primary", method: :get %>
+            <%= button_to "Add a User", new_user_path, class: "btn-edit", method: :get %>
         </div>
     </div>
 </div>
 <div id="wrapper">
     <div class="container">
-        
         <div class="row">
             <% @users.each do |user| %>
-                <div class="col-xs-12 col-sm-4">
-
-                    <div class="card">
-                        <% if user.avatar.url.exists? %>
-                            <%= image_tag user.avatar.url(:thumb)%>
-                        <% else %>
-                            <%= image_tag user.default_url(:thumb)%>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="global-card">
+                        <%= link_to user_path(user) do %>
+                            <div class="card">
+                                <div class="card-name">
+                                    <h2><%= "#{user.first_name}  #{user.last_name}"%></h2>
+                                    <p>User.book.count</p>
+                                </div>
+                                <div class="card-user">
+                                    <%= image_tag user.avatar.url(:thumb), class: "avatar-lg"%>
+                                </div> 
+                            </div>
                         <% end %>
-                        <div class="card-body">
-                            <h5 class="card-title"><%= link_to user.first_name, user_path(user) %></h5>
-                            <p class="card-text"><small class="text-muted">book</small></p>
-                        </div>
                     </div>
                 </div>
             <% end %>
