--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,6 +5,12 @@ $red: #EE5F5B;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: #32B796;
+$green: #6AD58B;
 $gray: #000000;
-$light-gray: #F4F4F4;
+$light-gray: #F8F8F8;
+
+$orange: #ff6023;
+$light-orange: #f3dfdb;
+$light-grey: #E8E8E8;
+$light-blue: #A9BAD9;
+
