--- a/app/assets/stylesheets/layouts/_wrapper.scss
+++ b/app/assets/stylesheets/layouts/_wrapper.scss
@@ -8,7 +8,8 @@
 
 #wrapper-top{
   padding: 20px 10px;
-  background-color: #F8F8F8;
+  background-color: rgba(248, 248, 248, 0.342);
   box-shadow: 0 1px 10px 0 rgba(0,0,0,0.07);
-
+  margin: 10px;
+  border-radius: 10px;
 }
