--- a/app/views/shared/_search-bar.html.erb
+++ b/app/views/shared/_search-bar.html.erb
@@ -1,3 +1,5 @@
-<%= simple_form_for :search, html: {class: "form-search"}, :method => :get do |f| %>
-            <%= f.input :search, autofocus: true, input_html: {class: "form-search-input", placeholder: "Entrer une adresse de retrait"}, label: false %>
-        <% end %>
+<div class="form-group">
+    <%= simple_form_for :search, :method => :get do |f| %>
+        <%= f.input :search, autofocus: true, input_html: {class: "form-search-input", placeholder: "find by name..."}, label: false %>
+    <% end %>
+</div>
