--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,20 @@
 
-  <div class="container">
-    <h1><%= @user.first_name%> <%= @user.last_name%></h1>
-    <%= image_tag @user.avatar.url(:thumb) %>
+<div id="wrapper">
+  <div class="container">  
+    <div class="card-show">
+      <div class="card-user">
+        <%= image_tag @user.avatar.url(:thumb), class: "avatar-square"%>
+      </div>
+      <div class="card-name-show">
+            <h2><%= "#{@user.first_name}  #{@user.last_name}"%></h2>
+            <p><%= @user.email%></p>
+        </div>
+    </div>
+    <p>User.book.count</p>
 
-    <%= link_to "Edit", edit_user_path(@user) %>
-
-    <%= link_to "Delete", @user, method: :delete, data: { confirm: 'Are you sure?' }%>
+    <div class="global-card-link">
+        <%= link_to "Edit", edit_user_path(@user), class: "btn-edit"%>
+        <%= link_to "Delete", @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn-delete"%>
+    </div>
   </div>
+</div>
