fix form and views

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,6 +12,7 @@
         color: $blue;
         opacity: 0.4;
     }
+    margin: 3px;
 }
 
 .btn-delete {
@@ -26,6 +27,7 @@
         text-decoration: none;
         color: $red;
     }
+    margin: 3px;
 }
 
 .btn-back {
@@ -42,5 +44,6 @@
         color: $green;
         opacity: 0.4;
     }
+    margin: 3px;
 }
   
