--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,1 +1,8 @@
-<%= render 'simple_form' %>
+<div id="wrapper">
+    <div class="container">
+        <div class="row">
+            <h1> Add a new Book </h1>
+            <%= render 'book_form' %>
+        </div>
+    </div>
+</div>
