--- a/app/assets/stylesheets/components/_book.scss
+++ b/app/assets/stylesheets/components/_book.scss
@@ -3,7 +3,7 @@
 	background-color: #fff;
 	border-radius: 5px;
     box-shadow: 1px 1px 1px 1px #ccc;
-    padding: 20px 20px;
+	padding: 20px 20px;
 }
 
 .book-image {
@@ -51,6 +51,7 @@
 }
 
 .book-info {
+	margin-bottom: 10px;
 	@include background-title;
 
 	.book-title {
