--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,10 @@
-<%= render 'simple_form' %>
+<div id="wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-8">
+                <h1> Add a User </h1>
+                <%= render 'user_form' %>
+            </div>
+        </div>
+    </div>
+</div>
