--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,14 +6,14 @@
         <%= image_tag @user.avatar.url(:thumb), class: "avatar-square"%>
       </div>
       <div class="card-name-show">
-            <h2><%= "#{@user.first_name}  #{@user.last_name}"%></h2>
-            <p><%= @user.email%></p>
+          <h2>Name : <%= "#{@user.first_name}  #{@user.last_name}"%></h2>
+          <p>Email : <%= @user.email%></p>
         </div>
     </div>
     <p>User.book.count</p>
 
     <div class="global-card-link">
-        <%= link_to "Edit", edit_user_path(@user), class: "btn-edit"%>
+        <%= link_to "Edit", edit_user_path(@user), method: :get, data: { confirm: 'Are you sure?' }, class: "btn-edit"%>
         <%= link_to "Delete", @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn-delete"%>
     </div>
   </div>
