--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,20 +18,18 @@
   <div class="container">
     <% @books.each do |book| %>
       <div class="col-md-4 col-xs-12"> 
-        <% if @books.count == 0 %>
-          <h1>NO BOOK</h1>
-        <% else %>
-          <div class="book_link">
-            <%= link_to book_path(book) do %>
-              <div class=" <%= book.is_available == false ? 'book_inavailable' : ''%>", onclick="window.location='<%= book_path(book) %>'">
-                  <%= image_tag book.book_cover.url(:book_index), class: "book-image" %>
-              </div>
-            <% end %>
-            <div class="book-title">
-              <p><%= book.title%></p>
+        <div class="book_link">
+          <% if book.borrowed? %>
+            <div class="book-inavailable">
+              <%= link_to image_tag(book.book_cover.url(:book_index), class: "book-image"), user_path(book.user) %>
             </div>
+          <% else %>  
+            <%= link_to image_tag(book.book_cover.url(:book_index), class: "book-image"), book_path(book) %>
+          <% end %>
+          <div class="book-title">
+            <p><%= book.title%></p>
           </div>
-        <% end %>
+        </div>
       </div>
     <% end %>
   </div>
