--- a/app/assets/stylesheets/components/_book.scss
+++ b/app/assets/stylesheets/components/_book.scss
@@ -1,21 +1,42 @@
-@mixin background-title {
+
+@mixin background-book {
 	box-sizing: border-box;
-	background-color: #fff;
 	border-radius: 5px;
     box-shadow: 1px 1px 1px 1px #ccc;
 	padding: 20px 20px;
-}
-
-.book-image {
     height: 350px;
 	width: 250px;
     margin-top: 30px;
     margin-bottom: 10px;
-    @include background-title;
     opacity: 1;
-    a:hover{
-        opacity: 0.5;
+    :hover{
+		opacity: 0.5;
+		cursor: pointer;
     }
+}
+
+.book-available {
+	@include background-book;
+	background-color: #fff;
+}
+
+.book-borrowed {
+	@include background-book;
+	background-color: $light-orange;
+}
+
+@mixin book-cover-index {
+	height: 300px;
+	width: 210px;
+}
+
+.book-cover-available {
+	@include book-cover-index;
+}
+
+.book-cover-borrowed {
+	@include book-cover-index;
+	filter: grayscale(1);
 }
 
 .book-title {
@@ -24,66 +45,4 @@
         opacity: 0.7;
         font-weight: lighter;
     }
-}
-
-.book-link {
-    position: absolute;
-    width: 100%;
-    z-index: 2;
-    background: black;
-    opacity: 0;
-    a:hover{
-        opacity: 0.5;
-    }
-}
-
-.book_inavailable {
-  -webkit-filter: grayscale(1);
-  filter: grayscale(1);
-}
-
-
-/* BOOK */
-.book-show {
-	height: 475px;
-	width: 325px;
-	@include background-title;
-}
-
-.book-info {
-	margin-bottom: 10px;
-	@include background-title;
-
-	.book-title {
-		margin-top: 0;
-		font-size: 2em;
-	}
-
-	.avg-rating {
-		font-size: 1.5em;
-		margin-top: 15px;
-		margin-bottom: 5px;
-	}
-
-	.number-of-reviews {
-		font-size: 0.85em;
-		font-style: italic;
-	}
-
-	.book-author {
-		font-size: 1.5em;
-		margin-top: 10px;
-		margin-bottom: 10px;
-		span {
-			font-size: 0.80em;
-		}	
-	}
-
-	.book-desc {
-		font-size: 1.05em;
-		line-height: 1.5;
-		margin-bottom: 15px;
-		margin-top: 15px;
-	}
-
 }
