--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,49 +1,40 @@
-.btn-edit {
-    color: $blue;
-    background-color:white;
-    border: 1px solid $blue;
-    padding: 3px 15px;
+@mixin mybutton{
     border-radius: 10px;
     font-weight: lighter;
+    margin: 3px;
     opacity: 1;
-    height: 35px;
+    background-color:white;
     &:hover {
         text-decoration: none;
-        color: $blue;
+        cursor: pointer;
         opacity: 0.4;
     }
-    margin: 3px;
+}
+
+.btn-edit {
+    @include mybutton;
+    color: $blue;
+    border: 1px solid $blue;
+    &:hover {
+        color: $blue;
+    }
 }
 
 .btn-delete {
+    @include mybutton;
     color: $red;
     border: 1px solid $red;
-    padding: 3px 15px;
-    border-radius: 10px;
-    font-weight: lighter;
-    opacity: 0.6;
     &:hover {
-        opacity: 1;
-        text-decoration: none;
         color: $red;
     }
-    margin: 3px;
 }
 
 .btn-back {
+    @include mybutton;
     color: $green;
-    background-color:white;
     border: 1px solid $green;
-    padding: 3px 15px;
-    border-radius: 10px;
-    font-weight: lighter;
-    opacity: 1;
-    height: 35px;
     &:hover {
-        text-decoration: none;
         color: $green;
-        opacity: 0.4;
     }
-    margin: 3px;
 }
   
