--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,25 +2,24 @@
 <div id="wrapper">
       <div class="container">
             <div class="col-md-4">
-
                   <%= image_tag @book.book_cover.url(:book_show), class: "book-show" %>
-
             </div>
 
-            <div class="col-md-8">
-
+            <div class="col-md-5 col-offset-md-7">
                   <div class="book-info">
-
                         <h2 class="book-title"><%= @book.title %></h2>
                         <h3 class="book-author"><span>From</span> <%= @book.author %></h3>
                         <p class="book-desc"><%= @book.resume %></p>
                   </div>
             </div>
+      </div>
+
+      <div class="container">
             <div class="col-md-3 col-xs-2">
-                  <%= link_to 'Edit', edit_book_path(@book), class: "btn-edit" %>
+                  <%= button_to 'Edit', edit_book_path(@book), class: "btn-edit" %>
             </div>
             <div class="col-md-3 col-xs-2">
-                  <%= link_to "Delete", @book, class: "btn-delete", method: :delete, data: { confirm: 'Are you sure?' }%>
+                  <%= button_to "Delete", @book, class: "btn-delete", method: :delete, data: { confirm: 'Are you sure?' }%>
             </div>
       </div>
 </div>
