--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,12 @@
 <div id="wrapper-top">
+
     <div class="head-container">
-        
-    </div>
-    <div class="head-container">
-        <div class="col-xs-2">
-            <%= link_to 'Back', url_for(:back), class: 'btn-back' %></div>
-        <div class="col-xs-8">
+        <div class="col-xs-2 col-md-2">
+            <%= button_to 'Back', url_for(:back), class: 'btn-back' %></div>
+        <div class="col-xs-8 col-md-8">
             <h1>USERS LIST : You have <%= @users.count%> users</h1>
         </div>
-        <div class="col-xs-2">
+        <div class="col-xs-2 col-md-2">
             <%= button_to "Add a User", new_user_path, class: "btn-edit", method: :get %>
         </div>
     </div>
@@ -17,13 +15,13 @@
     <div class="container">
         <div class="row">
             <% @users.each do |user| %>
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-md-6">
                     <div class="global-card">
                         <%= link_to user_path(user) do %>
                             <div class="card">
                                 <div class="card-name">
                                     <h2><%= "#{user.first_name}  #{user.last_name}"%></h2>
-                                    <p>User.book.count</p>
+                                    <p>numbers of books borrowed : <%= "#{(user.books).count}" %></p>
                                 </div>
                                 <div class="card-user">
                                     <%= image_tag user.avatar.url(:thumb), class: "avatar-lg"%>
