--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,11 @@
-
 <div id="wrapper">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8">
-                <h1> Update a User </h1>
-                <%= render 'user_form', user: @user %>
+                <div class="text-center">
+                    <h2> Update User </h1>
+                    <%= render 'user_form', user: @user %>
+                </div>
             </div>
         </div>
     </div>
