--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,24 @@
 <div id="wrapper-top">
 
     <div class="head-container">
-        <div class="col-xs-2 col-md-2">
-            <%= button_to 'Back', url_for(:back), class: 'btn-back' %></div>
-        <div class="col-xs-8 col-md-8">
-            <h1>USERS LIST : You have <%= @users.count%> users</h1>
+        <div class="row">
+            <div class="col-xs-2 col-md-2">
+                <%= button_to 'All books', books_path, class: 'btn-back', method: :get %>
+            </div>
         </div>
-        <div class="col-xs-2 col-md-2">
-            <%= button_to "Add a User", new_user_path, class: "btn-edit", method: :get %>
+
+        <div class="col-xs-8 col-md-8">
+            <h1>You have <%= @users.count%> users</h1>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-4 col-md-4">
+                <%= button_to "Add a User", new_user_path, class: "btn-edit", method: :get %>
+            </div>
         </div>
     </div>
 </div>
+
 <div id="wrapper">
     <div class="container">
         <div class="row">
