--- a/app/assets/stylesheets/components/_simple_form.scss
+++ b/app/assets/stylesheets/components/_simple_form.scss
@@ -1,10 +1,23 @@
-.simple_form div.input {
-    background-color: red;
-    clear: both; /* Required for Webkit, but not for Gecko */
+.form {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $light-orange;;
+    padding: 30px 20px;
+    border-radius: 10%;
+    box-shadow: 1px 1px 1px 1px $light-grey;
 }
 
 .form-group {
-    min-width: 320px;
-    margin: auto;
-    min-height: 92px;
+    text-align: center;
+    width: 320px;
+    min-height: 80px;
+}
+
+.form-text-field {
+    text-align: center;
+    width: 320px;
+    min-height: 150px;
+
 }
