--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -12,7 +12,7 @@
 
 .global-card-link{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 0 5px;
 }
 
@@ -52,6 +52,7 @@
 
 .card-show {
     height: 175px;
+    width: 500px;
     background-position: center;
     border-radius: 5px;
     position: relative;
