--- a/app/assets/stylesheets/layouts/_container.scss
+++ b/app/assets/stylesheets/layouts/_container.scss
@@ -11,14 +11,14 @@
     justify-content: space-around;
     padding: 10px 5px;
     h1 {
-        margin: 10px;
+        // margin: 10px;
         text-align: center;
         font-size: 25px;
         font-weight: bolder;
         text-shadow: 2px 2px $light-orange;
     }
     h2 {
-        margin: 10px;
+        // margin: 10px;
         text-align: center;
         font-size: 18px;
         text-shadow: 1px 1px $light-orange;
