--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,8 +9,8 @@
 
     <%= link_to 'Users', users_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to 'Books', books_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Borrow book</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Return book</a>
+    <%= link_to 'Borrow book', new_reservation_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to 'Return book', reservations_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
   </div>
 
