fix footer and banner

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer <%= yield(:footer_class) %>">
 
   <div class="footer-text">
-    site réalisé à Viroflay. Tous droits réservés.
+    site réalisé par ededieuleveult@gmail.com
   </div>
 
   <div class="footer-links">
