--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,7 +9,12 @@
     h1 {
         color: white;
         font-weight: bold;
-        font-size: 45px;
+        font-size: 48px;
+    }
+    h2 {
+        color: white;
+        font-weight: bold;
+        font-size: 38px;
     }
     p {
         color: white;
